--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -7,4 +7,4 @@ github: [cqworker]
 # liberapay: jdk
 # issuehunt: cqworker
 # otechie: Otechie username
-custom:['https://juejin.im/', 'https://cn.bing.com/']
+custom:['www.juejin.im/', 'www.cn.bing.com/']
