--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,10 +1,4 @@
-github: [cqworker]
-# patreon: cqworker
-# open_collective: Open Collective username
-# ko_fi:  Ko-fi username
-# tidelift:Tidelift platform-name/package-name
-# community_bridge: spring cloud
-# liberapay: jdk
-# issuehunt: cqworker
-# otechie: Otechie username
-custom:['www.juejin.im/', 'www.cn.bing.com/']
+github: [octocat, surftocat]
+patreon: octocat
+tidelift: npm/octo-package
+custom: ["https://www.paypal.me/octocat", octocat.com]
