--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: testCI
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -14,14 +14,11 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-  id: job1
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     env:
-     key1: 123
-     key2:321
-
-
+      key1: 123
+      key2: 321
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -34,5 +31,5 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        echo ${{jobs.job1.env.key1}},
+        echo ${{jobs.job1.env.key2}}.
