--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,19 +2,14 @@
 
 name: testCI
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  jobs_id1:
     runs-on: ubuntu-latest
     env:
       key1: 123
@@ -26,10 +21,10 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
-      run: echo ${{jobs.job1.env.key1}}
+      run: echo ${{jobs.jobs_id1.env.key1}}
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
-        echo ${{jobs.job1.env.key1}},
-        echo ${{jobs.job1.env.key2}}.
+        echo ${{jobs.jobs_id1.env.key1}},
+        echo ${{jobs.jobs_id1.env.key2}}.
