--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,10 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
-      run: echo ${{jobs.jobs_id1.env.key1}}
+      run: echo ${{ jobs_id1.env.key1 }}
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
-        echo ${{jobs.jobs_id1.env.key1}},
-        echo ${{jobs.jobs_id1.env.key2}}.
+        echo ${{ jobs_id1.env.key1 }},
+        echo ${{ jobs_id1.env.key2 }}.
