--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         KEY_3: chengqun
       run: |
        echo $KEY_1
-       echo $KEY_3
+       echo ${${KEY_3}:0:4}
 
     # Runs a set of commands using the runners shell
     - name: step_3
