字符串拆分

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,8 @@ jobs:
         KEY_3: chengqun
       run: |
        echo $KEY_1
-       echo "${chengqun:0:4}"
-       echo ${chengqun:0:4}
+       echo "${KEY_3:0:4}"
+       echo ${KEY_3:0:4}
 
     # Runs a set of commands using the runners shell
     - name: step_3
