--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
       KEY_2: 321
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+    continue-on-error: true
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - name: step_first
       uses: actions/checkout@v2
@@ -35,13 +36,18 @@ jobs:
        echo ${KEY_1}
        echo "${KEY_3:0:4}"
        echo ${KEY_3:0:4}
+       echo ${{github.event_name}}
+       echo ${{github}}
        
 
     # Runs a set of commands using the runners shell
     - name: ssh_login
       run: |
         ssh -p 31415 dev@120.24.179.212 
-
+    - name: another_ssh_login
+      if: ${{ failure() }}
+      run: |
+        echo "${?}"
         
     - name: docker_operation
       run: |
